# adversarial-market-marl

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
adversarial_market/: __init__.py
adversarial_market/agents/: __init__.py  arbitrageur.py  base_agent.py  execution_agent.py  market_maker.py
adversarial_market/environment/: __init__.py  lob_env.py  market_state.py  order.py  order_book.py
adversarial_market/evaluation/: __init__.py  evaluator.py  metrics.py  visualizer.py
adversarial_market/networks/: __init__.py  actor_critic.py  belief_transformer.py  execution_policy.py  mine_estimator.py
adversarial_market/training/: __init__.py  alternating_opt.py  ppo_update.py  rollout_buffer.py  trainer.py
adversarial_market/utils/: __init__.py  config.py  logger.py  math_utils.py  replay_buffer.py
agents/: index.html
api/agents/: index.html
api/environment/: index.html
api/evaluation/: index.html
api/networks/: index.html
api/training/: index.html
api/utils/: index.html
changelog/: index.html
configs/: ablation_lambda.yaml  default.yaml  fast_debug.yaml
configuration/: index.html
contributing/: index.html
docs/: agents.md  changelog.md  configuration.md  contributing.md  index.md  installation.md  quickstart.md  results.md  theory.md
docs/api/: agents.md  environment.md  evaluation.md  networks.md  training.md  utils.md
examples/: minimal_example.py
installation/: index.html
quickstart/: index.html
results/: index.html
scripts/: evaluate.py  sweep_lambda.py  train.py
search/: search_index.json
tests/: conftest.py
tests/integration/: test_checkpoint_and_utils.py  test_env_step.py  test_evaluator.py  test_training_loop.py
tests/unit/: test_actor_critic.py  test_agents.py  test_belief_transformer.py  (+6 more)
theory/: index.html
